user-skel/ansible_collections/ace_box/ace_box/roles/app-easytrade/files/kustomize/base/environment/easytrade-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: easytrade
    kubernetes.io/ingress.class: public
  labels:
    app: easytrade
  name: easytrade-ingress
spec:
  rules:
  - host: "easytrade.hostname.com"
    http:
      paths:
      - backend:
          service:
            name: frontendreverseproxy-easytrade
            port: 
              number: 80
        path: /
        pathType: ImplementationSpecific
